--- a/src/app/landing-page/landing-page.component.css
+++ b/src/app/landing-page/landing-page.component.css
@@ -84,11 +84,19 @@ color: white;
   border-radius: 0px;
   background-color: white;
 
-  transition: transform .6s ease;
-  }
+  transition: transform 0.1s ease;
+
+
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+
+}
 
 .featurecard:hover{
-transform: scale(1.05);
+  transform: scale(1.05);
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  background-color: rgba(243,248,248,1)
+
 }
 
 .itemimg {
